<resources>
    <string name="app_name">MySpendyApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--<string name="hello_blank_fragment">Hello blank fragment</string> -->
    <string name="title_spending">Spending</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Các String mới thêm vào -->
    <string name="app_logo">App Logo</string>
    <string name="app_name1">App Name</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>

    <string name="title_income_expense">Thu chi</string>
    <string name="balance">Số dư</string>
    <string name="income">Thu</string>
    <string name="expense">Chi</string>

</resources>