<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.forgotpassword.FragmentEnterPhoneNumber">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/logo"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"/>

        <ImageView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/spendy"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/quen_mat_khau"
            android:textColor="@color/main_green"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Đừng lo lắng! Vui lòng nhập số điện thoại của bạn để nhận mã xác minh"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Số điện thoại"
            android:textColor="@color/main_green"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Nhập số điện thoại"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Xác minh"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/main_green"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/baloo2_medium"/>
    </LinearLayout>
</ScrollView>
